Added a bunch of bullshit and primitive middlewares